# LabelVideo

./: CMakeLists.txt  README.md  label.cpp  label.hpp  main.cpp
